finalizando criação de cartas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="inicio">
-        <img class="inicio__img" src="./assets/inicio/simboloanfitriao.svg" alt="">
+        <img class="inicio__img" src="./assets/anfitrilogo.png" alt="">
         <form class="inicio__input">
             <h1>INSIRA SEU NOME <br> E QUE OS JOGOS COMEÇEM</h1>
             <input id="nome" type="text" placeholder="Digite seu nome">
