--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <script defer src="./js/inicio.js"></script>
-    <title>Document</title>
+    <title>Jogo da memoria: Menu</title>
 </head>
 <body>
     <main class="inicio">
