--- a/jogo.html
+++ b/jogo.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/components/novos_estilos.css">
     <script defer src="./js/game.js"></script>
-    <title>Document</title>
+    <title>Jogo da memoria: Game</title>
 </head>
 <body>
-    <div class="grid">
-        <!-- <div class="card">
-            <div class="face front"></div>
-            <div class="face back"></div>
-        </div> -->
-    </div>
-    
+    <main>
+        <header>
+            <span class="player"></span>
+            <span>Tempo: <span class="timer">00</span></span>
+        </header>
+        <div class="grid"></div>
+    </main>
 </body>
 </html>
